feat:  add type declarations

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@allmeida/cpf-ts",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc --declaration",
     "clean": "rm -rf dist/",
     "lint": "eslint --ext .ts,.tsx src test",
     "ci": "npm run lint && npm run test && npm run build"
