--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@allmeida/cpf-ts",
-  "version": "0.1.3",
-  "description": "",
+  "version": "0.1.4",
+  "description": "Validação de CPF em TypeScript",
+  "keywords": ["cpf"],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ramon-to/cpf-ts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ramon-to/cpf-ts/issues"
+  },
+  "homepage": "https://github.com/ramon-to/cpf-ts#readme",
   "scripts": {
     "test": "jest",
     "build": "npm run clean && tsc --declaration",
@@ -13,7 +22,7 @@
   },
   "author": "",
   "public": true,
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
